<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/map_marker_name"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_marker_name"/>
            <EditText
                android:id="@+id/map_marker_edit_name"
                android:hint="@string/map_marker_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/deleteMarkerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onClickDeleteButton"
            android:src="@drawable/delete" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/map_radius_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentLeft="true"
            android:text="@string/mapRadius"/>
        <TextView
            android:id="@+id/map_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="50"
            android:layout_toLeftOf="@+id/map_radius_unit"/>
        <TextView
            android:id="@+id/map_radius_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/map_unit"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <SeekBar
        android:id="@+id/map_radius_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="200"/>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map" tools:context="org.dhbw.geo.map.Maps"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
        </LinearLayout>


